samples/_failures_safe/1761629921_e8e098_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f533d09c.c: In function ‘main’:
./samples/SAFE/__tmp_f533d09c.c:187:13: error: expected declaration or statement at end of input
  187 |             case STATE_READY: printf("READY"); break;
      |             ^~~~
./samples/SAFE/__tmp_f533d09c.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f533d09c.c:187:13: error: expected declaration or statement at end of input
